feat: Add MnemonicModal and improve table interactions
Introduces a new MnemonicModal component for learning element mnemonics, enhancing user engagement.

Improves the PeriodicTable component by adding a button to trigger the mnemonic modal and updating the font family for better character rendering.

Wraps the main App component in an ErrorBoundary to catch and display errors gracefully.

Updates Tailwind CSS configuration to include a custom text-stroke utility for styling.

Enhances Firebase initialization logging to provide more specific error messages.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
               sans: ['"Zen Maru Gothic"', 'Varela Round', 'ui-rounded', 'SF Pro Rounded', 'system-ui', 'sans-serif'],
             }
           }
-        }
+        },
+        plugins: [
+          function({ addUtilities }) {
+            addUtilities({
+              '.text-stroke-white': {
+                '-webkit-text-stroke': '6px white',
+                'paint-order': 'stroke fill',
+              },
+            })
+          }
+        ]
       }
     </script>
     <!-- Adding Zen Maru Gothic (Rounded) for Chinese/Japanese support and Varela Round -->
